[package]
authors = ["Jonathan Shore <jonathan.shore@gmail.com>"]
categories = ["development-tools"]
description = "Reflection capabilities for rust"
keywords = ["reflection", "ffi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tr8dr/reflect"
name = "reflect"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[dependencies]
lazy_static = "1.4.0"
once_cell = "1.19.0"
ctor = "0.1.22"
reflect_macros = { path = "../reflect_macros" }
